_SOFTWARE_FACTORY/_archive/veligo/ralph-wiggum/logs/T017_20260112_184643.log
Je commence par lire le fichier monolithique pour comprendre sa structure.
[94m[1m| [0m[90m Glob     [0m{"pattern":"**/reporting_analytics_module.rs"}
[94m[1m| [0m[90m Grep     [0mreporting.*test|mod tests
[94m[1m| [0m[90m Grep     [0mreporting_analytics_module|reporting_analytics
[94m[1m| [0m[90m Glob     [0m{"pattern":"**/reporting*.rs"}
[94m[1m| [0m[90m Glob     [0m{"pattern":"**/backend/src/**/reporting*/**/*.rs"}
[94m[1m| [0m[90m Glob     [0m{"pattern":"**/backend/src/modules/**/*.rs"}
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/services/reporting/mod.rs
[91m[1m| [0m[90m Bash     [0mCount lines in reporting files

     736 /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend/src/services/reporting/kpi_service.rs
      57 /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend/src/services/reporting/mod.rs
     343 /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend/src/services/reporting/models.rs
    1388 /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend/src/services/reporting/report_generator.rs
    1015 /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend/src/services/reporting/report_routes.rs
     788 /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend/src/services/reporting/report_templates.rs
    4327 total

[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/services/reporting/report_generator.rs
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/services/reporting/kpi_service.rs
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/services/reporting/report_routes.rs
[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/services/reporting/report_templates.rs
Vérifions l'existence de tests pour le module reporting et exécutons-les pour établir l'état de référence:
[91m[1m| [0m[90m Bash     [0mRun reporting module tests

warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend/Cargo.toml
workspace: /Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/Cargo.toml
   Compiling veligo-api v0.1.0 (/Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend)
error[E0432]: unresolved import `tenant_theme_routes::tenant_config_routes`
  --> backend/src/infrastructure/http/mod.rs:32:9
   |
32 | pub use tenant_theme_routes::tenant_config_routes;
   |         ^^^^^^^^^^^^^^^^^^^^^--------------------
   |         |                    |
   |         |                    help: a similar name exists in the module: `tenant_theme_routes`
   |         no `tenant_config_routes` in `infrastructure::http::tenant_theme_routes`

error[E0531]: cannot find tuple struct or tuple variant `State` in this scope
  --> backend/src/infrastructure/http/chaos_routes.rs:77:5
   |
77 |     State(state): State<ChaosState>,
   |     ^^^^^ not found in this scope
   |
   = note: tuple struct `crate::modules::waiting_list_module::tests::State` exists but is inaccessible
help: consider importing this tuple struct
   |
 4 + use axum::extract::State;
   |

error[E0412]: cannot find type `State` in this scope
  --> backend/src/infrastructure/http/chaos_routes.rs:77:19
   |
77 |     State(state): State<ChaosState>,
   |                   ^^^^^ not found in this scope
   |
   = note: struct `crate::modules::waiting_list_module::tests::State` exists but is inaccessible
help: consider importing this struct
   |
 4 + use axum::extract::State;
   |

error[E0531]: cannot find tuple struct or tuple variant `State` in this scope
  --> backend/src/infrastructure/http/chaos_routes.rs:90:5
   |
90 |     State(state): State<ChaosState>,
   |     ^^^^^ not found in this scope
   |
   = note: tuple struct `crate::modules::waiting_list_module::tests::State` exists but is inaccessible
help: consider importing this tuple struct
   |
 4 + use axum::extract::State;
   |

error[E0412]: cannot find type `State` in this scope
  --> backend/src/infrastructure/http/chaos_routes.rs:90:19
   |
90 |     State(state): State<ChaosState>,
   |                   ^^^^^ not found in this scope
   |
   = note: struct `crate::modules::waiting_list_module::tests::State` exists but is inaccessible
help: consider importing this struct
   |
 4 + use axum::extract::State;
   |

error[E0425]: cannot find function, tuple struct or tuple variant `State` in this scope
   --> backend/src/infrastructure/http/chaos_routes.rs:124:22
    |
124 |     get_chaos_status(State(state)).await
    |                      ^^^^^
    |
    = note: tuple struct `crate::modules::waiting_list_module::tests::State` exists but is inaccessible
help: a local variable with a similar name exists (notice the capitalization)
    |
124 -     get_chaos_status(State(state)).await
124 +     get_chaos_status(state(state)).await
    |
help: consider importing one of these items
    |
  4 + use axum::extract::State;
    |
  4 + use stripe::TaxRateJurisdictionLevel::State;
    |

error[E0531]: cannot find tuple struct or tuple variant `State` in this scope
   --> backend/src/infrastructure/http/chaos_routes.rs:128:5
    |
128 |     State(state): State<ChaosState>,
    |     ^^^^^ not found in this scope
    |
    = note: tuple struct `crate::modules::waiting_list_module::tests::State` exists but is inaccessible
help: consider importing this tuple struct
    |
  4 + use axum::extract::State;
    |

error[E0412]: cannot find type `State` in this scope
   --> backend/src/infrastructure/http/chaos_routes.rs:128:19
    |
128 |     State(state): State<ChaosState>,
    |                   ^^^^^ not found in this scope
    |
    = note: struct `crate::modules::waiting_list_module::tests::State` exists but is inaccessible
help: consider importing this struct

Le projet a des erreurs de compilation préexistantes. Vérifions la structure et créons les nouveaux modules selon la tâche:
[91m[1m| [0m[90m Bash     [0mList reporting directory

total 296
drwxr-xr-x   8 sylvain  staff    256 Dec 30 18:38 .
drwxr-xr-x  23 sylvain  staff    736 Dec 29 22:18 ..
-rw-------   1 sylvain  staff  24457 Dec 28 02:06 kpi_service.rs
-rw-------   1 sylvain  staff   2019 Dec 27 20:32 mod.rs
-rw-------   1 sylvain  staff  10450 Dec 27 12:39 models.rs
-rw-r--r--   1 sylvain  staff  43810 Dec 30 18:38 report_generator.rs
-rw-------   1 sylvain  staff  34258 Dec 28 02:30 report_routes.rs
-rw-------   1 sylvain  staff  26213 Dec 28 02:17 report_templates.rs

[96m[1m| [0m[90m Read     [0mveligo-platform/backend/src/services/reporting/models.rs
Maintenant je vais décomposer le module reporting en respectant les 4 nouveaux fichiers demandés. Commençons par créer la nouvelle structure:
[92m[1m| [0m[90m Write    [0mveligo-platform/backend/src/services/reporting/analytics_engine.rs
[92m[1m| [0m[90m Write    [0mveligo-platform/backend/src/services/reporting/export_service.rs
